# autocolor-calendar

./: .claudeignore  .dev.vars.example  .gitignore  .worktreeinclude  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  GEMINI.md  README.md  STATUS.md  TODO.md  drizzle.config.ts  eslint.config.js  harness.toml  main.py  next-todo.md  package.json  pnpm-lock.yaml  pyproject.toml  review-calendar-addon.skill  start-and-setup-task.skill  tsconfig.json  vitest.config.ts  wrangler.toml
.github/: CODEOWNERS  pull_request_template.md
.husky/: pre-commit  pre-push
.scratch/: merge-gate-soft-mode-data.md
docs/: ARCHITECTURE.md  add-on-ui-plan.md  ai-readiness-map.html  ai-readiness-score.json  architecture-diagram.md  architecture-guidelines.md  backend-infrastructure-handoff.md  backup-recovery-policy.md  completion-roadmap.md  feature-user-oauth-backend-api-module-plan.md  feature-web-ui-complex-rules-plan.md  live-resources.md  marketplace-readiness.md  project-overview.md  security-principles.md  setup-backend-infrastructure-plan.md
drizzle/: 0000_omniscient_green_goblin.sql  0001_rls.sql  0002_categories_color_id_check.sql  0003_sync_core.sql  0004_sync_failures_rls.sql  0005_watch_channel_token.sql  (+15 more)
evals/dataset-builder/: README.md  pyproject.toml
evals/dataset-builder/src/dataset_builder/: __init__.py  augment.py  build_en_dataset.py  cli.py  cluster.py  config.py  embed.py  fetch_hf.py  label_clusters.py  openai_client.py  prompts.py  translate.py  validate.py
evals/embedding-eval/: OPERATOR-GUIDE.md  README.md  REPORT.md  REPORT.md.tmpl  manifest.json  parity_probes.txt  pyproject.toml
evals/embedding-eval/scripts/: analyze.py  percat.py  push_wandb.py  verify.py
evals/embedding-eval/src/embedding_eval/: __init__.py  backends.py  build_gold.py  cli.py  config.py  dataset.py  ledger.py  manifest.py  metrics.py  sweep.py  wai_parity.py
evals/embedding-eval/tests/: test_build_gold.py  test_finding_overwrite.py  test_finding_reingest_newtitles.py  test_finding_rounding_gate.py  test_finding_tsv_escaping.py  test_gate_finding3.py  test_ledger_gate.py  test_metrics.py  test_sweep_smoke.py
evals/embedding-eval/tests/fixtures/: gold_synth.json
(+324 files in other folders)
