[project]
name = "dataset-builder"
version = "0.1.0"
description = "Builds the multilingual classification eval datasets under evals/datasets/."
requires-python = ">=3.12"
dependencies = [
  "datasets>=3.0,<4",
  "openai>=1.50,<2",
  "scikit-learn>=1.5,<2",
  "numpy>=2.0,<3",
  "tenacity>=9.0,<10",
  "python-dotenv>=1.0,<2",
]

[project.scripts]
build-dataset = "dataset_builder.cli:main"

[dependency-groups]
dev = ["ruff>=0.6,<1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_builder"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]
